--- a/ai-weather-app/package.json
+++ b/ai-weather-app/package.json
@@ -15,6 +15,9 @@
     "weather-underground-icons": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
